Add caching to decoded base64 skin urls